force-app/main/default/objects/External_Refund_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Check_Request_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avetta_ID__c</fullName>
        <formula>Account__r.Organizer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avetta ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Encrypted Field to store bank account numbers for external refund requests</description>
        <label>Bank Account Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <description>Encrypted field to store the bank routing number for external refund requests.</description>
        <label>Bank Routing Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Check_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_del__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFT__c</fullName>
        <inlineHelpText>Date the wire transfer was initiated.</inlineHelpText>
        <label>EFT</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIA_s__c</fullName>
        <description>This field is used to track IIA numbers.</description>
        <label>IIA #s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>External Refund Requests</relationshipLabel>
        <relationshipName>External_Refund_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_of_Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup field to allow Jeff to enter a user to notify them on approval of the refund. Used in the External Refund Request Approval process.</description>
        <inlineHelpText>User to be notified when refund completed.</inlineHelpText>
        <label>Notify of Refund</label>
        <referenceTo>User</referenceTo>
        <relationshipName>External_Refund_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Check_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <description>Field to capture the sort code for banks in the UK.  Requires numbers and dashes.</description>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field to track the status of the external refund request for use in the approval process.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Check Cut</fullName>
                    <isActive>false</isActive>
                    <label>Check Cut</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swift__c</fullName>
        <label>Swift</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>External Refund Requests</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Avetta_ID__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>External Refund Requests</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Refund Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>